testdata/test/resources/com/yafred/asn1/test/should_fail/integer_duplicate_number.asn
-- FAIL duplicate id

Module DEFINITIONS ::= BEGIN

My-integer ::= INTEGER { un (1), deux (2), trois (1) }


END